# axumdocker

./: .gitignore  Cargo.toml  README.md  dockerfile  requests.rest
src/: customerrors.rs  main.rs  mware.rs  routesproduct.rs  routesuser.rs
