[package]
name = "axumdocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
sync_wrapper = "0.1.1"
sqlx-macros = {version = "0.6.2"}
sqlx = {version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "offline", "time", "chrono", "uuid", "bigdecimal"] }
tower-http = { version = "0.3.5", features = ["cors"] }
dotenv = "0.15.0"
http = "0.2.8"
axum-macros = "0.3.0"
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["v4", "serde"] }
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1.0.150", features = ["derive"] }
tracing-subscriber = "0.3.16"
tokio = { version = "1.23.0", features = ["full"] }
tracing = "0.1.37"